// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders with a long name 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoAvatar-root PicassoAvatar-xsmall"
    >
      <div
        class="PicassoAvatar-textContainer PicassoAvatar-square PicassoAvatar-xsmall PicassoAvatar-clippedCorner"
      />
      <p
        class="MuiTypography-root PicassoTypography-bodyInherit PicassoTypography-invert PicassoAvatar-text PicassoAvatar-centeredContent PicassoAvatar-textCapLimit MuiTypography-body1"
      >
        JRB
      </p>
    </div>
  </div>
</div>
`;

exports[`Avatar renders with a placeholder icon 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoAvatar-root PicassoAvatar-xsmall"
    >
      <div
        class="PicassoAvatar-textContainer PicassoAvatar-square PicassoAvatar-xsmall PicassoAvatar-clippedCorner"
      />
      <svg
        class="PicassoSvgProfile16-root PicassoAvatar-centeredContent PicassoAvatar-xsmallIcon PicassoSvgProfile16-white"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M5.639 9.408a5 5 0 114.723 0A7.003 7.003 0 0115 16h-1a6 6 0 10-12 0H1a7.003 7.003 0 014.639-6.592zM8 9a4 4 0 100-8 4 4 0 000 8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Avatar renders with an image 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoAvatar-root PicassoAvatar-xsmall"
    >
      <img
        alt="Photo alt text"
        class="PicassoImage-root PicassoAvatar-image PicassoAvatar-square PicassoAvatar-xsmall PicassoAvatar-clippedCorner"
        src="http://example.png"
      />
    </div>
  </div>
</div>
`;

exports[`Avatar renders with initials 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoAvatar-root PicassoAvatar-xsmall"
    >
      <div
        class="PicassoAvatar-textContainer PicassoAvatar-square PicassoAvatar-xsmall PicassoAvatar-clippedCorner"
      />
      <p
        class="MuiTypography-root PicassoTypography-bodyInherit PicassoTypography-invert PicassoAvatar-text PicassoAvatar-centeredContent MuiTypography-body1"
      >
        JR
      </p>
    </div>
  </div>
</div>
`;
